# montrs

./: .gitignore  Cargo.toml  Craft prompts my agent to do these copy.txt  LICENSE  MontRS v0.1PRD.md  README.md  fmt-prd.md  mont_rs_router_product_requirements_document_prd copy.md  mont_rs_router_product_requirements_document_prd.md  simple_bench.rs  simple_exec.rs  test_fmt.rs
.agent/: agent.json  agent.txt  tools.json
.github/workflows/: ci.yml
.llm/: llm.json  llm.txt
crates/cargo-mont/: Cargo.toml  README.md
crates/cargo-mont/src/: lib.rs  main.rs
crates/cargo-mont/src/compile/: front.rs  server.rs  style.rs
crates/cargo-mont/src/config/: mod.rs
crates/core/: README.md
crates/core/src/: lib.rs
crates/create-mont-app/: README.md
crates/montrs-cli/: Cargo.toml
crates/montrs-cli/src/: main.rs
crates/montrs-core/: Cargo.toml
crates/montrs-core/src/: env.rs  features.rs  lib.rs  router.rs  signals.rs
crates/montrs-orm/: Cargo.toml
crates/montrs-orm/src/: lib.rs
crates/montrs-schema/src/: lib.rs
crates/montrs-test/: Cargo.toml
crates/montrs-test/src/: lib.rs
crates/orm/: Cargo.toml
crates/test/: README.md
docs/: ai-onboarding.md  appspec.md  architecture.md  benchmarking.md  cli.md  contributing.md  deployment.md  first-30-minutes.md  fmt.md  golden-path.md  index.md  modules.md  orm.md  packages.md  schema.md  testing.md
docs/agent/: agent-first.md  agentic-workflows.md  app-developer-prompt.md  appspec.md  framework-contributor-prompt.md  index.md  mcp-setup.md  metadata.md  onboarding.md  prompt-usage.md  spec.md
docs/agent/workflows/: adding-features.md  fixing-errors.md  new-projects.md  restructuring.md
docs/ai/: ai-first.md  appspec.md  metadata.md  spec.md
docs/architecture/: overview.md  packages.md  philosophy.md
docs/community/: contributing.md  deployment.md  packages-contribution.md
docs/core/: errors.md  modules.md  plates.md  router.md  schema.md
docs/getting-started/: first-30-minutes.md  golden-path.md  introduction.md
docs/guides/: common-mistakes.md  pitfalls.md
docs/orm/: async.md  backends.md  index.md
docs/testing/: benchmarking.md  index.md
docs/tooling/: cli.md  fmt.md  tasks.md
examples/todo/: Cargo.toml
examples/todo/src/: main.rs
templates/default/: Cargo.toml  README.md  index.html  mont.toml  tailwind.toml
templates/default/app/: Cargo.toml
templates/default/app/src/: main.rs
templates/default/e2e/: Cargo.toml
templates/default/e2e/src/: main.rs
templates/default/style/: main.css
templates/todo/: .gitignore  Cargo.toml  README.md  mont.toml  montrs.toml  tailwind.toml
templates/todo/e2e/: Cargo.toml
templates/todo/e2e/src/: lib.rs  main.rs
templates/todo/e2e/tests/: e2e.rs
templates/todo/src/: main.rs
templates/workspace/: .gitignore  Cargo.toml  README.md  index.html  mont.toml  montrs.toml  tailwind.toml
templates/workspace/apps/web/: Cargo.toml
templates/workspace/apps/web/src/: main.rs
templates/workspace/e2e/: Cargo.toml
templates/workspace/e2e/src/: main.rs
