[workspace]
resolver = "2"

members = [
    "crates/montrs-core",
    "crates/montrs-schema",
    "crates/montrs-orm",
    "crates/montrs-test",
    "crates/montrs-cli",
    "examples/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Afsall Labs"]
repository = "https://github.com/afsall-labs/mont-rs"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
futures = "0.3"
