[workspace]
resolver = "2"

members = [
    "packages/bench",
    "packages/cli",
    "packages/core",
    "packages/fmt",
    "packages/llm",
    "packages/montrs",
    "packages/orm",
    "packages/schema",
    "packages/test",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Afsall Labs"]
repository = "https://github.com/afsall-labs/montrs"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
futures = "0.3"
leptos = { version = "0.8", features = ["hydrate", "ssr"] }
regex = "1.10"
