[package]
name = "montrs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "create-mont-app"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
