[package]
name = "montrs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true

# Reactivity-specific dependencies
parking_lot = "0.12"
slotmap = "1.0"
once_cell = "1.18"
