[package]
name = "montrs-orm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.12"
serde.workspace = true
thiserror.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
