[package]
name = "todo-example"
version = "0.1.0"
edition = "2024"

[dependencies]
montrs-core = { path = "../../crates/montrs-core" }
montrs-schema = { path = "../../crates/montrs-schema" }
montrs-orm = { path = "../../crates/montrs-orm" }
montrs-test = { path = "../../crates/montrs-test" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = { workspace = true }
