[package]
name = "todo-example"
version = "0.1.0"
edition = "2024"

[dependencies]
montrs-core = { path = "../../packages/core" }
montrs-schema = { path = "../../packages/schema" }
montrs-orm = { path = "../../packages/orm" }
montrs-test = { path = "../../packages/test" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = { workspace = true }
tokio-postgres = "0.7"
leptos = { workspace = true }
