[workspace]
resolver = "2"
members = ["apps/*", "packages/*", "e2e"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
montrs-core = { path = "../../packages/core" }
leptos = { version = "0.8", features = ["hydrate", "ssr"] }
tailwind-fuse = { version = "0.3.2", features = ["variant"] }
serde = { version = "1", features = ["derive"] }
